# akr_wayland

./: .gitignore  Cargo.toml  OPTIMIZATION_PLAN.md  PERFORMANCE_ANALYSIS_REPORT.md  README.md  ahk.toml  enh.toml
src/: config.rs  error.rs  main.rs
src/events/: keyboard.rs  mod.rs  window.rs
src/mappings/: evdev_to_key_name.rs  key_name_to_evdev_code.rs  mod.rs
src/services/: key_repeater.rs  keycode_map.rs  mod.rs  virtual_device.rs  window_context.rs
src/services/keyboard_listener/: dry_keyboard_listener.rs  key_mapping.rs  keyboard_listener.rs  mod.rs  modifier_state.rs  trait.rs
src/services/window_detector/: dry_run.rs  dry_window_detector.rs  kdotool.rs  mod.rs  sway.rs  trait.rs  window_detector.rs  wmctrl.rs  xdotool.rs
src/utils/: device_finder.rs  mod.rs  permissions.rs
