[package]
name = "ahk-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Утилита для повторения нажатых клавиш при их удерживании с поддержкой фильтрации по активным окнам"
license = "MIT"
repository = "https://github.com/yourusername/ahk-rust"

[dependencies]
# Async runtime (оптимизированные features)
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }

# Современная работа с evdev
evdev = "0.13.1"
uinput = "0.1"

# Продвинутая конфигурация
clap = { version = "4.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }

# D-Bus для реактивного отслеживания окон
zbus = "5.9.0"

# Эффективные структуры данных
dashmap = "6.1.0"
parking_lot = "0.12"
smallvec = "1.11"

# Современная обработка ошибок
anyhow = "1.0"
thiserror = "2.0.12"

# Логирование (оптимизированные features)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], default-features = false }

# Утилиты
once_cell = "1.19"
async-trait = "0.1"

[features]
default = []

[profile.release]
# ✅ Максимальная оптимизация скорости
opt-level = 3            # Максимальная оптимизация скорости
lto = "fat"              # Агрессивная link-time оптимизация
codegen-units = 1        # Лучшая оптимизация
panic = "abort"          # Убираем unwinding
strip = true             # Удаляем debug символы

[profile.release-small]
inherits = "release"
opt-level = "s"          # ✅ Оптимизация размера (было "z")

# ✅ Новый профиль для максимальной производительности
[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
